<resources>
    <string name="app_name">TAAM</string>

    <!--field hints-->
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_lot_number">Enter lot number…</string>
    <string name="enter_the_name">Enter the name…</string>
    <string name="enter_the_description">"Enter the description: "</string>
    <string name="dropdownMenuCategory">Categories…</string>
    <string name="dropdownMenuPeriod">Periods…</string>

    <!--button text-->
    <string name="upload_photos_videos">Upload photos/videos</string>
    <string name="submit">Submit</string>

    <!--period dropdown-->
    <string-array name="categories_array">
        <item>Jade</item>
        <item>Paintings</item>
        <item>Calligraphy</item>
        <item>Rubbings</item>
        <item>Bronze</item>
        <item>Brass and Copper</item>
        <item>Gold and Silvers</item>
        <item>Lacquer</item>
        <item>Enamels</item>
    </string-array>

    <!--category dropdown-->
    <string-array name="periods_array">
        <item>Xia</item>
        <item>Shang</item>
        <item>Zhou</item>
        <item>Chuanqiu</item>
        <item>Zhanggou</item>
        <item>Qin</item>
        <item>Hang</item>
        <item>Shangou</item>
        <item>Ji</item>
        <item>South and North</item>
        <item>Shui</item>
        <item>Tang</item>
        <item>Liao</item>
        <item>Song</item>
        <item>Jin</item>
        <item>Yuan</item>
        <item>Ming</item>
        <item>Qing</item>
        <item>Modern</item>
    </string-array>


    <!--Login/Signup Strings-->
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <!--Other-->
    <string name="admin">Admin</string>
    <string name="view">View</string>
    <string name="search">Search</string>
    <string name="remove">Remove</string>
    <string name="back">Back</string>
    <string name="collection_management">Collection Management</string>
    <string name="report">Report</string>
    <string name="add">Add</string>
    <string name="lot">Lot</string>
    <string name="name">Name: </string>
    <string name="category">Category: </string>
    <string name="period">Period: </string>
    <string name="descriptionPreview">Description (Shortened Preview): </string>
    <string name="descriptionFull">Description: </string>
    <string name="pictureOrVideoPreview">Picture/Video (1 media item preview): </string>
    <string name="pictureOrVideoFull">Picture/Video (Click on media for full screen view): </string>
    <string name="yes">YES</string>
    <string name="cancel">CANCEL</string>
    <string name="result">Result</string>
    <string name="searchResultHeader">Search result based on</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_entry">New entry</string>
    <string name="detail">detail</string>
    <string name="for_item">For item</string>
    <string name="generate_report_by">Generate report by:</string>
    <string name="cancel_not_bold">Cancel</string>
    <string name="generate">Generate</string>
    <string name="generate_report">Generate report</string>
    <string name="full_screen_image">Full Screen Image Display</string>
    <string name="full_screen_video">Full Screen Video Display</string>

    <string-array name="report_options_array">
        <item>Lot number</item>
        <item>Name</item>
        <item>Category</item>
        <item>Category with Description and Picture only</item>
        <item>Period</item>
        <item>Period with Description and Picture only</item>
        <item>All Items</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>