<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.UserHomeFragment">

    <Button
        android:id="@+id/report_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="35dp"
        android:text="@string/report"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/view_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediaRecyclerView" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="35dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediaRecyclerView" />

    <Button
        android:id="@+id/remove_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/remove"
        android:textSize="13.5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/report_button"
        app:layout_constraintStart_toEndOf="@+id/add_button"
        app:layout_constraintTop_toBottomOf="@+id/search_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/search"
        app:layout_constraintEnd_toStartOf="@+id/back_button"
        app:layout_constraintStart_toEndOf="@+id/view_button"
        app:layout_constraintTop_toBottomOf="@+id/mediaRecyclerView" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_button"
        app:layout_constraintVertical_bias="0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mediaRecyclerView"
        android:layout_width="357dp"
        android:layout_height="554dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293" />

</androidx.constraintlayout.widget.ConstraintLayout>
