<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CollectionManagementFragment">

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/buttonRemove"
        app:layout_constraintEnd_toStartOf="@+id/buttonBack"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonView"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:layout_width="356dp"
        android:layout_height="538dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collectionManagement"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonRemove"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonView"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonRemove"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/remove"
        android:textSize="13.5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonReport"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/buttonAdd"
        app:layout_constraintTop_toBottomOf="@+id/buttonSearch"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/buttonReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonSearch"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonView"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/view"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintEnd_toStartOf="@+id/buttonSearch"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/collectionManagement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collection_management"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <Button
        android:id="@+id/buttonReport"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/report"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonRemove"
        app:layout_constraintTop_toBottomOf="@+id/buttonBack"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>
